testsuite/tests/grammar/invalid_rule_usage/test.out
foo.lkt:4:41: error: Wrong rule name: 'sec_rules'. 
3 |     @main_rule main_rule <- ExampleNode(sec_rules)
  |                                         ^^^^^^^^^

Done
